home insurange rct process design changes

--- a/src/home-insurance/11-animal-details.html
+++ b/src/home-insurance/11-animal-details.html
@@ -140,53 +140,26 @@
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:100%">
+                                    </div>
+                                </div>
+                                <div class="progress-text mt-1">Property Information</div>
+                            </div>
+                            <div class="col">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -213,7 +186,7 @@
                                                             <button class="accordion-button" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
-                                                                <h4 class="title fs-18">Kind 1</h4>
+                                                                <h4 class="title fs-18">Animal type 1</h4>
                                                             </button>
                                                         </h2>
                                                         <div id="collapseTwo" class="accordion-collapse collapse show"
@@ -338,7 +311,7 @@
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn" for="livingYes">
                                                                                     <input class="radio-control" type="radio" name="type1"
-                                                                                        value="" id="livingYes" checked="">
+                                                                                        value="" id="livingYes">
                                                                                     <span class="radio-custom"></span>
                                                                                     <span class="radio-label fs-14">Yes </span>
                                                                                 </label>
@@ -346,7 +319,7 @@
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn" for="livingNo">
                                                                                     <input class="radio-control" type="radio" name="type1"
-                                                                                        value="" id="livingNo" >
+                                                                                        value="" id="livingNo" checked="">
                                                                                     <span class="radio-custom"></span>
                                                                                     <span class="radio-label fs-14">No </span>
                                                                                 </label>
@@ -373,7 +346,7 @@
                                                             <button class="accordion-button" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
-                                                                <h4 class="title fs-18">Kind 2</h4>
+                                                                <h4 class="title fs-18">Animal type 2</h4>
                                                             </button>
                                                         </h2>
                                                         <div id="collapseTwo" class="accordion-collapse collapse show"
@@ -498,7 +471,7 @@
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn" for="livingYes">
                                                                                     <input class="radio-control" type="radio" name="type2"
-                                                                                        value="" id="livingYes" checked="">
+                                                                                        value="" id="livingYes" >
                                                                                     <span class="radio-custom"></span>
                                                                                     <span class="radio-label fs-14">Yes </span>
                                                                                 </label>
@@ -506,7 +479,7 @@
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn" for="livingNo">
                                                                                     <input class="radio-control" type="radio" name="type2"
-                                                                                        value="" id="livingNo" >
+                                                                                        value="" id="livingNo" checked="">
                                                                                     <span class="radio-custom"></span>
                                                                                     <span class="radio-label fs-14">No </span>
                                                                                 </label>
@@ -534,7 +507,7 @@
                                                             <button class="accordion-button" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
-                                                                <h4 class="title fs-18">Kind 3</h4>
+                                                                <h4 class="title fs-18">Animal type 3</h4>
                                                             </button>
                                                         </h2>
                                                         <div id="collapseTwo" class="accordion-collapse collapse show"
@@ -659,7 +632,7 @@
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn" for="livingYes">
                                                                                     <input class="radio-control" type="radio" name="livding"
-                                                                                        value="" id="livingYes" checked="">
+                                                                                        value="" id="livingYes">
                                                                                     <span class="radio-custom"></span>
                                                                                     <span class="radio-label fs-14">Yes </span>
                                                                                 </label>
@@ -667,7 +640,7 @@
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn" for="livingNo">
                                                                                     <input class="radio-control" type="radio" name="livding"
-                                                                                        value="" id="livingNo" >
+                                                                                        value="" id="livingNo" checked="">
                                                                                     <span class="radio-custom"></span>
                                                                                     <span class="radio-label fs-14">No </span>
                                                                                 </label>
