--- a/src/home-insurance/15-trampoline-detail.html
+++ b/src/home-insurance/15-trampoline-detail.html
@@ -140,53 +140,25 @@
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:100%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Property Information</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -215,7 +187,7 @@
                                                             <input class="radio-control" type="radio" name="fenced"
                                                                 value="" id="livingYes" checked="">
                                                             <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">Yes </span>
+                                                            <span class="radio-label fs-14 w-100 text-center">Yes </span>
                                                         </label>
                                                     </div>
                                                     <div class="col-6">
@@ -223,7 +195,7 @@
                                                             <input class="radio-control" type="radio" name="fenced"
                                                                 value="" id="livingNo" >
                                                             <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">No </span>
+                                                            <span class="radio-label fs-14 w-100 text-center">No </span>
                                                         </label>
                                                     </div>
                                                 </div>
@@ -237,7 +209,7 @@
                                                             <input class="radio-control" type="radio" name="inground"
                                                                 value="" id="Above" checked="">
                                                             <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">Yes </span>
+                                                            <span class="radio-label fs-14 w-100 text-center">Yes </span>
                                                         </label>
                                                     </div>
                                                     <div class="col-6">
@@ -245,7 +217,7 @@
                                                             <input class="radio-control" type="radio" name="inground"
                                                                 value="" id="Inground" >
                                                             <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">No </span>
+                                                            <span class="radio-label fs-14 w-100 text-center">No </span>
                                                         </label>
                                                     </div>
                                                 </div>
@@ -259,7 +231,7 @@
                                                             <input class="radio-control" type="radio" name="willing"
                                                                 value="" id="divingYes" checked="">
                                                             <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">YES </span>
+                                                            <span class="radio-label fs-14 w-100 text-center">YES </span>
                                                         </label>
                                                     </div>
                                                     <div class="col-6">
@@ -267,7 +239,7 @@
                                                             <input class="radio-control" type="radio" name="willing"
                                                                 value="" id="divingNo" >
                                                             <span class="radio-custom"></span>
-                                                            <span class="radio-label fs-14 w-100">No </span>
+                                                            <span class="radio-label fs-14 w-100 text-center">No </span>
                                                         </label>
                                                     </div>
                                                 </div>
