--- a/src/home-insurance/27.2-claim-information.html
+++ b/src/home-insurance/27.2-claim-information.html
@@ -143,53 +143,25 @@
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:100%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Property Information</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:50%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -222,7 +194,7 @@
                                                 <div class="accordion custom" id="accordionPolicy3">
                                                     <div class="accordion-item rounded-1">
                                                         <h2 class="accordion-header" id="headingTwo4">
-                                                            <button class="accordion-button" type="button"
+                                                            <button class="accordion-button border-bottom-0" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo4"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
                                                                 <h4 class="title fs-18">
@@ -332,7 +304,7 @@
                                                 <div class="accordion custom" id="accordionPolicy2">
                                                     <div class="accordion-item rounded-1">
                                                         <h2 class="accordion-header" id="headingTwo3">
-                                                            <button class="accordion-button" type="button"
+                                                            <button class="accordion-button border-bottom-0" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo3"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
                                                                 <h4 class="title fs-18">
