--- a/src/home-insurance/32-flood-insurance.html
+++ b/src/home-insurance/32-flood-insurance.html
@@ -160,6 +160,10 @@
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
                     </div>
                     <div class="container mt-5 pt-5">
+                        <div class="text-center mb-4 user-info">
+                            <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
+                        </div>
                         <h3 class="title  text-center">Do you have flood insurance?</h3>
                        
                         <div style="gap:10px;" class="d-flex flex-column flex-sm-row align-items-center justify-content-center my-3">
