--- a/src/home-insurance/17.2-heater-details.html
+++ b/src/home-insurance/17.2-heater-details.html
@@ -143,53 +143,25 @@
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:100%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Property Information</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:20%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -213,7 +185,7 @@
                                                     <div class="col-6">
                                                         <label class="radio-inline radio-btn text-center" for="livingAbove">
                                                             <input class="radio-control" type="radio" name="aboveBelow"
-                                                                value="" id="livingAbove" checked="">
+                                                                value="" id="livingAbove">
                                                             <span class="radio-custom"></span>
                                                             <span class="radio-label fs-14 w-100">Above
                                                             </span>
@@ -222,7 +194,7 @@
                                                     <div class="col-6">
                                                         <label class="radio-inline radio-btn  text-center" for="livingBelow">
                                                             <input class="radio-control" type="radio" name="aboveBelow"
-                                                                value="" id="livingBelow">
+                                                                value="" id="livingBelow" checked="">
                                                             <span class="radio-custom"></span>
                                                             <span class="radio-label fs-14 w-100">Below
                                                             </span>
@@ -289,7 +261,7 @@
                                             <div class="col-md-4">
                                                 <label class="checkbox-inline squar-boxes w-100" for="Pellet">
                                                     <input class="checkbox-control" type="checkbox" value=""
-                                                        id="Pellet" >
+                                                        id="Pellet" checked="">
                                                     <span class="checkbox-custom"></span>
                                                     <span class="checkbox-label fs-14">
                                                         
