--- a/src/home-insurance/8.3-personal-info-LLC.html
+++ b/src/home-insurance/8.3-personal-info-LLC.html
@@ -140,53 +140,26 @@
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:20%">
+                                        aria-valuemax="100" style="width:100%">
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Property Information</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -229,7 +202,7 @@
                                                 <div class="accordion custom" id="accordionPolicy">
                                                     <div class="accordion-item rounded-1">
                                                         <h2 class="accordion-header" id="headingTwo">
-                                                            <button class="accordion-button" type="button"
+                                                            <button class="accordion-button border-bottom-0" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
                                                                 <h4 class="title fs-18">LLC Details</h4>
@@ -269,39 +242,31 @@
 
                                                                 <div class="row g-3 mt-0">
                                                                     <hr>
-                                                                    <div class="col-md--4 col-12 mt-0">
+                                                                    <div class="col-12 mt-0">
                                                                         <div class="me-3">
                                                                             <h5 class="fs-16">Any other properties owned by this entity?</h5>
                                                                             <div
                                                                                 class="d-flex align-items-center justify-content-start">
-                                                                                <div
-                                                                                    class="d-flex align-self-center me-3">
-                                                                                    <label
-                                                                                        class="radio-inline radio-btn"
-                                                                                        for="livingYes">
+                                                                                <div class="d-flex align-self-center me-3">
+                                                                                    <label class="radio-inline radio-btn"
+                                                                                        for="entityYes">
                                                                                         <input class="radio-control"
-                                                                                            type="radio" name="livding"
-                                                                                            value="" id="livingYes"
+                                                                                            type="radio" name="entity"
+                                                                                            value="" id="entityYes"
                                                                                             checked="">
-                                                                                        <span
-                                                                                            class="radio-custom"></span>
-                                                                                        <span
-                                                                                            class="radio-label fs-14">Yes
+                                                                                        <span class="radio-custom"></span>
+                                                                                        <span class="radio-label fs-14 bg-white">Yes
                                                                                         </span>
                                                                                     </label>
                                                                                 </div>
-                                                                                <div
-                                                                                    class="d-flex align-self-center me-3">
-                                                                                    <label
-                                                                                        class="radio-inline radio-btn"
-                                                                                        for="livingNo">
+                                                                                <div class="d-flex align-self-center me-3">
+                                                                                    <label class="radio-inline radio-btn"
+                                                                                        for="entityNo">
                                                                                         <input class="radio-control"
-                                                                                            type="radio" name="livding"
-                                                                                            value="" id="livingNo">
-                                                                                        <span
-                                                                                            class="radio-custom"></span>
-                                                                                        <span
-                                                                                            class="radio-label fs-14">No
+                                                                                            type="radio" name="entity"
+                                                                                            value="" id="entityNo">
+                                                                                        <span class="radio-custom"></span>
+                                                                                        <span class="radio-label fs-14 bg-white">No
                                                                                         </span>
                                                                                     </label>
                                                                                 </div>
@@ -335,7 +300,7 @@
                                                 <div class="accordion custom" id="accordionPolicy">
                                                     <div class="accordion-item rounded-1">
                                                         <h2 class="accordion-header" id="headingTwo">
-                                                            <button class="accordion-button" type="button"
+                                                            <button class="accordion-button border-bottom-0" type="button"
                                                                 data-bs-toggle="collapse"
                                                                 data-bs-target="#collapseTwo" aria-expanded="true"
                                                                 aria-controls="collapseTwo">
