--- a/src/home-insurance/8.4-personal-info-trust.html
+++ b/src/home-insurance/8.4-personal-info-trust.html
@@ -140,53 +140,26 @@
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:20%">
+                                        aria-valuemax="100" style="width:100%">
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Property Information</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -230,7 +203,7 @@
                                                 <div class="accordion custom" id="accordionPolicy">
                                                     <div class="accordion-item rounded-1">
                                                         <h2 class="accordion-header" id="headingTwo">
-                                                            <button class="accordion-button" type="button"
+                                                            <button class="accordion-button border-bottom-0" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
                                                                 <h4 class="title fs-18">Trust Details</h4>
@@ -276,11 +249,11 @@
                                                                                 <label class="radio-inline radio-btn"
                                                                                     for="livingYes">
                                                                                     <input class="radio-control"
-                                                                                        type="radio" name="livding"
+                                                                                        type="radio" name="living"
                                                                                         value="" id="livingYes"
                                                                                         checked="">
                                                                                     <span class="radio-custom"></span>
-                                                                                    <span class="radio-label fs-14">Yes
+                                                                                    <span class="radio-label fs-14 bg-white">Yes
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
@@ -288,10 +261,10 @@
                                                                                 <label class="radio-inline radio-btn"
                                                                                     for="livingNo">
                                                                                     <input class="radio-control"
-                                                                                        type="radio" name="livding"
+                                                                                        type="radio" name="living"
                                                                                         value="" id="livingNo">
                                                                                     <span class="radio-custom"></span>
-                                                                                    <span class="radio-label fs-14">No
+                                                                                    <span class="radio-label fs-14 bg-white">No
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
@@ -303,53 +276,53 @@
                                                                             class="d-flex align-items-center justify-content-start">
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn"
-                                                                                    for="livingYes">
+                                                                                    for="grantorYes">
                                                                                     <input class="radio-control"
-                                                                                        type="radio" name="living"
-                                                                                        value="" id="livingYes"
+                                                                                        type="radio" name="grantor"
+                                                                                        value="" id="grantorYes"
                                                                                         checked="">
                                                                                     <span class="radio-custom"></span>
-                                                                                    <span class="radio-label fs-14">Yes
+                                                                                    <span class="radio-label fs-14 bg-white">Yes
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn"
-                                                                                    for="livingNo">
+                                                                                    for="grantorNo">
                                                                                     <input class="radio-control"
-                                                                                        type="radio" name="living"
-                                                                                        value="" id="livingNo">
+                                                                                        type="radio" name="grantor"
+                                                                                        value="" id="grantorNo">
                                                                                     <span class="radio-custom"></span>
-                                                                                    <span class="radio-label fs-14">No
+                                                                                    <span class="radio-label fs-14 bg-white">No
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-md-6 ">
+                                                                    <div class="col-md-12 ">
                                                                         <h5 class="fs-16">Any other properties owned by this entity?</h5>
                                                                         <div
                                                                             class="d-flex align-items-center justify-content-start">
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn"
-                                                                                    for="livingYes">
+                                                                                    for="entityYes">
                                                                                     <input class="radio-control"
-                                                                                        type="radio" name="living"
-                                                                                        value="" id="livingYes"
+                                                                                        type="radio" name="entity"
+                                                                                        value="" id="entityYes"
                                                                                         checked="">
                                                                                     <span class="radio-custom"></span>
-                                                                                    <span class="radio-label fs-14">Yes
+                                                                                    <span class="radio-label fs-14 bg-white">Yes
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                             <div class="d-flex align-self-center me-3">
                                                                                 <label class="radio-inline radio-btn"
-                                                                                    for="livingNo">
+                                                                                    for="entityNo">
                                                                                     <input class="radio-control"
-                                                                                        type="radio" name="living"
-                                                                                        value="" id="livingNo">
+                                                                                        type="radio" name="entity"
+                                                                                        value="" id="entityNo">
                                                                                     <span class="radio-custom"></span>
-                                                                                    <span class="radio-label fs-14">No
+                                                                                    <span class="radio-label fs-14 bg-white">No
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
@@ -382,7 +355,7 @@
                                                 <div class="accordion custom" id="accordionPolicy">
                                                     <div class="accordion-item rounded-1">
                                                         <h2 class="accordion-header" id="headingTwo">
-                                                            <button class="accordion-button" type="button"
+                                                            <button class="accordion-button border-bottom-0" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
                                                                 <h4 class="title fs-18">Additional Insured 1</h4>
