home insurange rct process design changes and fixed design of jewellry

--- a/src/home-insurance/11-animal-details.html
+++ b/src/home-insurance/11-animal-details.html
@@ -181,8 +181,8 @@
 
                                             <div class="col-12">
                                                 <div class="accordion custom" id="accordionPolicy">
-                                                    <div class="accordion-item accordion-white rounded-1">
-                                                        <h2 class="accordion-header" id="headingTwo">
+                                                    <div class="accordion-item border accordion-white rounded-1">
+                                                        <h2 class="accordion-header p-1" id="headingTwo">
                                                             <button class="accordion-button" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
@@ -339,10 +339,10 @@
 
                                             </div>
 
-                                            <div class="col-12">
+                                            <div class="col-12 mt-0">
                                                 <div class="accordion custom" id="accordionPolicy">
-                                                    <div class="accordion-item accordion-white rounded-1">
-                                                        <h2 class="accordion-header" id="headingTwo">
+                                                    <div class="accordion-item border accordion-white rounded-1">
+                                                        <h2 class="accordion-header p-1" id="headingTwo">
                                                             <button class="accordion-button" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
@@ -500,10 +500,10 @@
                                             </div>
 
                                             
-                                            <div class="col-12">
+                                            <div class="col-12 mt-0">
                                                 <div class="accordion custom" id="accordionPolicy">
-                                                    <div class="accordion-item accordion-white rounded-1">
-                                                        <h2 class="accordion-header" id="headingTwo">
+                                                    <div class="accordion-item border accordion-white rounded-1">
+                                                        <h2 class="accordion-header p-1" id="headingTwo">
                                                             <button class="accordion-button" type="button"
                                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                                 aria-expanded="true" aria-controls="collapseTwo">
