Pdf update and claim profile

--- a/src/pdf-forms/binder-img.html
+++ b/src/pdf-forms/binder-img.html
@@ -115,9 +115,11 @@
             height: 14px;
             transform: translateY(-6px);
         }
-        .page-details.binders-pdf .answer .check-mark:not(.other-true) input{
+
+        .page-details.binders-pdf .answer .check-mark:not(.other-true) input {
             display: none;
         }
+
         .page-details.binders-pdf .answer .check-mark input {
             margin-top: 6px;
         }
@@ -158,6 +160,44 @@
             left: 30px;
             height: 86px;
             width: 360px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .addrss-2 {
+            top: 65px;
+            left: 397px;
+            height: 30px;
+            width: 360px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .a3.a3-1 {
+            left: 394px;
+            top: 12px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .a3.a3-2 {
+            left: 518px;
+            top: 12px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .a3.a3-3 {
+            left: 626px;
+            top: 12px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .a3.a3-4 {
+            left: 394px;
+            top: 27px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .a3.a3-5 {
+            left: 519px;
+            top: 27px;
+        }
+
+        .page-details.binders-pdf .certificate-holder-section .a4 {
+            left: 430px;
+            top: 36px;
+            width: 328px;
         }
 
         .page-details.binders-pdf .coverage-section {
@@ -220,6 +260,57 @@
         .page-details.binders-pdf .coverage-section .a4 {
             top: 47px;
             left: 11px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a5 {
+            top: 66px;
+            width: 340px;
+            left: 10px;
+            height: 78px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a6 {
+            top: 160px;
+            width: 340px;
+            left: 10px;
+            height: 118px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a7 {
+            top: 303px;
+            width: 340px;
+            left: 10px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a7 .c1 {
+            top: -14px;
+            left: -5px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a7 .c2 {
+            top: -14px;
+            left: 107px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a8 {
+            top: 330px;
+            width: 340px;
+            left: 10px;
+            height: 57px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a9 {
+            top: 393px;
+            width: 340px;
+            left: 10px;
+            height: 33px;
+        }
+
+        .page-details.binders-pdf .coverage-section .a10 {
+            top: 439px;
+            width: 340px;
+            left: 10px;
+            height: 57px;
         }
 
         .page-details.binders-pdf .description-operation-section {
@@ -765,6 +856,56 @@ Fall River, MA 02721
                         <input type="text" value="111,300" />
                     </div>
                 </div>
+
+                <div class="answer a5">
+                    <textarea class="form-control">City Of Boston
+                        7 BRAYTON AVE
+                        FALL RIVER MA 0277
+                        </textarea>
+                </div>
+                <div class="answer a6">
+                    <textarea class="form-control">City Of Boston
+                        7 BRAYTON AVE
+                        FALL RIVER MA 0277
+                        </textarea>
+                </div>
+
+                <div class="answer a7">
+                    <input type="text" value="anything" />
+
+                    <div class="answer c1">
+                        <span class="check-mark"></span>
+                    </div>
+
+                    <div class="answer c2">
+                        <span class="check-mark"></span>
+                    </div>
+                </div>
+
+
+                <div class="answer a8">
+                    <textarea class="form-control">City Of Boston
+7 BRAYTON AVE
+FALL RIVER MA 0277
+                        </textarea>
+                </div>
+
+
+                <div class="answer a9">
+                    <textarea class="form-control">City Of Boston
+7 BRAYTON AVE
+FALL RIVER MA 0277
+                        </textarea>
+                </div>
+
+
+                <div class="answer a10">
+                    <textarea class="form-control">City Of Boston
+                        7 BRAYTON AVE
+                        FALL RIVER MA 0277
+                        </textarea>
+                </div>
+
             </div>
 
             <div class="insurer-options limits-box">
@@ -820,6 +961,21 @@ FALL RIVER MA 0277
 FALL RIVER MA 0277
 </textarea>
                 </div>
+
+                <div class="answer addrss-2">
+                    <textarea class="form-control">City Of Boston
+7 BRAYTON AVE
+FALL RIVER MA 0277
+</textarea>
+                </div>
+
+                <div class="answer a3 a3-1">
+                    <span class="check-mark"></span>
+                </div>
+                <div class="answer a4">
+                    <input type="text" value="100000" />
+                </div>
+
             </div>
         </div>
     </div>
