--- a/src/pdf-forms/cerificate-img.html
+++ b/src/pdf-forms/cerificate-img.html
@@ -45,8 +45,8 @@
 
 
     <link rel="icon" href="../images/favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../assets/css/ceritificate.css">
+    <!-- <link rel="stylesheet" href="../assets/css/main.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/css/ceritificate.css"> -->
 
     <style>
         body {
@@ -69,7 +69,7 @@
             z-index: 10000;
         }
 
-        .page-details.certificate-pdf .form-img {
+        .form-img {
             width: 100%;
         }
 
@@ -92,6 +92,7 @@
             position: absolute;
             background: transparent;
             overflow: hidden;
+            border: 0;
         }
 
         .page-details.certificate-pdf .answer textarea {
